you can't edit this

--- a/views/grid/index.ejs
+++ b/views/grid/index.ejs
@@ -11,7 +11,9 @@
 
     <ul class="grid_list">
       <li>
-				<a class="edit" href="/grids/<%- grid.slug %>/edit">EDIT</a>
+        <% if (String(currentUser._id) === String(grid.user._id)) { %>
+				  <a class="edit" href="/grids/<%- grid.slug %>/edit">EDIT</a>
+				<% } %>
 				<div class="fill" style="width:<%= percent %>%;"></div>
         <a href="/grids/<%- grid.slug %>"><%= grid.name %></a>
       </li>
