say no to ternary ops

--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -71,7 +71,7 @@
 				<% for (email in collaborators) { %>
 				  <% powerUps = collaborators[email] %>
 			  	<tr>
-  					<td><%- gridOwner ? "Player " + (i + 2) : email %></td>
+  					<td><%- gridOwner ? email : "Player " + (i + 2) %></td>
   					<% for (var i = 0; i < colors.length; i++) { %>
   					  <% var color = colors[i]; %>
   					  <td class="<%- color %>"><%- powerUps[color] || '0' %></td>
