fix messaging bug

--- a/views/invite/show.ejs
+++ b/views/invite/show.ejs
@@ -5,7 +5,7 @@
 	<h1>WELCOME TO POWERUP!</h1>
 	<h2>Set your password and we'll get started.</h2>
   <div class="field">
-		<label>NEW PASS</label>
+		<label>SET A PASSWORD</label>
     <input type="password" name="user[password]" id="pass_1" />
   </div>
   
