--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -91,15 +91,17 @@
   			<% } %>
 				
 			</table>
-			<form action="/grids/<%= grid.slug %>/collaborators" method="post">
-	      <div class="field">
-	        <input type="text" class="text" name="collaborators" size="40"
-	          placeholder="Email" />
-	      </div>
-	      <div class="submit">
-	        <button type="submit" class="submit">Invite</button>
-	      </div>
-	    </form>
+			<% if (gridOwner) { %>
+  			<form action="/grids/<%= grid.slug %>/collaborators" method="post">
+  	      <div class="field">
+  	        <input type="text" class="text" name="collaborators" size="40"
+  	          placeholder="Email" />
+  	      </div>
+  	      <div class="submit">
+  	        <button type="submit" class="submit">Invite</button>
+  	      </div>
+  	    </form>
+      <% } %>
 		</div>
 	</div>
 	
