--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -54,7 +54,7 @@
 				  <span class="icon"></span>SETTINGS
 				</a>
 				<a href="/grids" class="grids button">
-				  <span class="icon"></span>GRIDS
+				  <span class="icon"></span>My Goals
 				</a>
 			<% } %>
 		</div>
