--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/socket.io.js"></script>
 	<script type="text/javascript" src="/js/underscore-min.js"></script>
+	<script type="text/javascript" src="/js/backbone-min.js"></script>
 	<script type="text/javascript" src="/js/jquery.easing.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
 	
