fiften to switchboard

--- a/views/page/switchboard.ejs
+++ b/views/page/switchboard.ejs
@@ -22,6 +22,13 @@
 			<p>Need an awesome name to unite the band? Look no further.</p>
 		</div>
 	</li>
+	<li>
+		<img src="/img/icons/fiften.png" />
+		<div>
+			<h2><a href="/games/fiften">FIFTEN</a></h2>
+			<p>Game to improve your concentration and mental fortitude.</p>
+		</div>
+	</li>
 </ul>
 
 
