--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -164,7 +164,7 @@
 <% include ../partials/footer.ejs %>
 
 <script type="text/javascript" src="/js/grid.js"></script>
-<script type="text/javascript" src="/js/power_up.js"></script>
+<script type="text/javascript" src="/js/powerup.js"></script>
 <script type="text/javascript">
   $(function () {
     grid = JSON.parse('<%- JSON.stringify(grid) %>');
