--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -155,6 +155,10 @@
 	</div>
 </div>
 
+<% if(gridOwner && grid.powerUps.length == 0 && gridCount == 1){ %>
+	
+<% } %>
+
 <% include ../partials/footer.ejs %>
 
 <script type="text/javascript" src="/js/grid.js"></script>
