--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -4,7 +4,12 @@ body {
   background:url('/img/bg_3.jpg') no-repeat center top;
   background:url('/img/country-road.jpg') no-repeat center top;
   background:url('/img/bg_2.png');
+  background:rgb(60, 61, 63);
   background-size:auto;
+}
+
+#logo {
+  opacity:.8;
 }
 
 #content {
@@ -82,6 +87,7 @@ body {
 
 #content .legend button span {
   display:inline-block;
+  text-shadow: 1px 1px 0 rgba(0,0,0,.3);
 }
 
 #content .legend button .plus {
@@ -99,23 +105,29 @@ body {
 
 #content .legend .black {
   background:rgba(57,57,57,1);
+  background:#68dcaa;
 }
 #content .legend .black:hover {
   background:rgba(50,50,50,1);
+  background:#60ca9d;
 }
 
 #content .legend .red {
   background:rgba(203,0,0,.85);
+  background:#f85b54;
 }
 #content .legend .red:hover {
   background:rgba(203,0,0,1);
+  background:#e8554e;
 }
 
 #content .legend .blue {
   background:rgba(6,146,192,.85);
+  background:#36779c;
 }
 #content .legend .blue:hover {
   background:rgba(6,146,192,1);
+  background:#306a8c;
 }
 
 #content .legend .green {
@@ -190,6 +202,7 @@ body {
 
 #grid li.active div {
   background:rgba(57,57,57,1);
+  background:#68dcaa;
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   transform: rotateY(180deg);
@@ -197,10 +210,12 @@ body {
 
 #grid li.red div {
   background:rgba(203,0,0,1);
+  background:#f85b54;
 }
 
 #grid li.blue div {
   background:rgba(6,146,192,1);
+  background:#36779c;
 }
 
 #grid li.green div {
