online indicator so far

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -484,3 +484,12 @@ body {
   background: #cb0000;
   color:#fff;
 }
+
+.collaborators.section td.user .green-dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  background: green;
+}
