--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 	
 	<div id="nav">
 		<a class="right" target="_blank" href="http://twitter.com/powerupio">Twitter</a>
-		<a class="right" target="_blank" href="#" style="display:none;">G+</a>
+		<a class="right" target="_blank" href="http://blog.powerup.io">Blog</a>
 		<a href="/getting-started">Getting Started</a>
 		<a href="/tos">TOS</a>
 		<a href="/contact">Contact</a>
