--- a/views/auth/sign_in.ejs
+++ b/views/auth/sign_in.ejs
@@ -14,7 +14,7 @@
     </div>
     
 		<ul class="right links">
-			<li><a href="/forgot">Forgot password?</a></li>
+			<li><a href="/forgot" style="display:none;">Forgot password?</a></li>
 			<li><a href="/sign_up">Create account</a></li>
 		</ul>
     <button type="submit" class="submit">Submit</button>
