--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -551,7 +551,7 @@ body {
   z-index:3000;
   background:#fff;
   width:300px;
-  padding:20px;
+  padding:15px;
   -webkit-box-shadow:0 0 20px rgba(0,0,0,.85);
   color:#444;
 }
@@ -559,7 +559,35 @@ body {
 #popup h1 {
   font-family: "HelveticaNeue-CondensedBold", "Helvetica Neue",arial;
   text-decoration:uppercase;
-  font-size: 25px;
+  font-size: 20px;
+  margin-bottom:2px;
+}
+
+#popup .time {
+  font-size:14px;
+  color:#777;
+  padding-bottom:15px;
+}
+
+#popup .data {
+  clear:left;
+}
+
+#popup .data label {
+  width:120px;
+  padding-right:10px;
+  text-align:right;
+  font-size:14px;
+  color:#777;
+  display:block;
+  padding-top:7px;
+  float:left;
+}
+
+#popup .data input {
+  width:155px;
+  padding:5px;
+  border:1px solid #ddd;
 }
 
 #popup .arrow {
@@ -572,4 +600,29 @@ body {
   -webkit-transform:rotate(45deg);
   -moz-transform:rotate(45deg);
   transform:rotate(45deg);
+}
+
+#popup .close {
+  position:absolute;
+  top:15px;
+  right:15px;
+  background:transparent url('/img/glyphicons_207_remove_2.png') no-repeat;
+  width:18px;
+  height:18px;
+  padding:0;
+  opacity:.2;
+}
+
+#popup .delete {
+  padding-top:10px;
+  text-align:center;
+}
+
+#popup .delete a {
+  font-size:13px;
+  color:#aaa;
+}
+
+#popup .close:hover {
+  opacity:.3;
 }
