--- a/views/partials/grid_mini_form.ejs
+++ b/views/partials/grid_mini_form.ejs
@@ -11,7 +11,7 @@
   </div>
   
   <div class="field">
-		<label>WORK UNITS</label>
+		<label>TASKS</label>
     <input type="text" name="workUnit[]" value="10 Push-Ups" class="small work_unit required" />
 		<input type="text" name="workUnit[]" class="small work_unit" value="20 Sit-Ups" />
 		<input type="text" name="workUnit[]" class="small last work_unit" value="Run 10 Minutes" />
