add data fields

--- a/views/grid/edit.ejs
+++ b/views/grid/edit.ejs
@@ -44,15 +44,17 @@
 		<% } %>
   </div>
 
-	<div class="field">
-		<label>DATA</label>
+	<div id="data_fields">
+		<div class="field">
+			<label>DATA</label>
 		
-		<input type="text" value="" class="med" />
-		<select class="small">
-			<option>Number</option>
-			<option>Text</option>
-		</select>
-  </div>
+			<input type="text" value="" class="med" />
+			<select class="small">
+				<option>Number</option>
+				<option>Text</option>
+			</select>
+	  </div>
+	</div>
 
 	<div class="field">
 		<% var grid_master = "YOU" %>
