--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -549,7 +549,7 @@ body {
 #popup {
   position:absolute;
   z-index:3000;
-  background:#fff;
+  background:#fff url('/img/icons/popup_arrows.png') no-repeat bottom right;
   width:300px;
   padding:15px;
   -webkit-box-shadow:0 0 20px rgba(0,0,0,.85);
